Fix alignment issue

--- a/client/src/components/ToiletBoard.css
+++ b/client/src/components/ToiletBoard.css
@@ -1,6 +1,8 @@
 .ToiletBoard {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .ToiletDisplay {
